@@ -42,13 +42,14 @@
   0fc48f3538d5fcc3f1e0f74618eba805bc293e8b 2011101100 mingw32-libarchive.xml
   6dcfb028214d55e8bb9e5c3497568e1151040cd3 2011103100 mingw32-libiconv.xml
   9fb60f097832c4b192a13f6c524fe8020f2326e5 2011101100 mingw32-libtool.xml
+  abf16c6e3575585f92c4a88b7be2c1bf6f7e5f26 2012021600 mingw32-lua.xml
   aaa310c7d830e7e9eef6738273630dda8e70d674 2011101100 mingw32-make.xml
   d72826fa6526c7253dc7d6c0a5be4846df11a995 2011110600 mingw32-mgwport.xml
   a80ddc9b75352027ec1a8e4f43838133c88fb1d1 2011110600 mingw32-mingw-get.xml
   c22c976533d4437a89af9a11c2bb188506f85952 2011101100 mingw32-mingw-utils.xml
   397021010754b50cdbbe5d5003b1f6217158ec8e 2010083100 mingw32-mpc.xml
   c35e6513fa814743400729714413bd749ff148ef 2010083100 mingw32-mpfr.xml
-  ce8330eee748d725ad00be146166e753e9ce9d12 2011110100 mingw32-package-list.xml
+  814705be1ceceb689eece03b4b6d28d79ef9272b 2012021600 mingw32-package-list.xml
   f04e64fef62d2dac423b664b3d502ef36e34074c 2011101100 mingw32-pexports.xml
   2dc9b22e0a53267bd4f764100b4d01b740f3aa87 2011101100 mingw32-popt.xml
   9399cb6c2efd8fd907c42a278a6f41bbde9e440c 2011091400 mingw32-pthreads-w32.xml
