@@ -1,6 +1,15 @@
+2012-02-16  Keith Marshall  <keithmarshall@users.sourceforge.net>
+
+	Add Lua packages as MinGW extensions.
+
+	* mingw32/mingw32-lua.xml: New file.
+	* mingw32/mingw32-package-list.xml (mingw32-lua): Add reference.
+	* mingw32/issue.log: Updated accordingly.
+
 2012-02-10  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>
 
-	Update & publish mingw32-gdb. Split the gdb package into gdb and gdb-python.
+	Update & publish mingw32-gdb.
+	Split the gdb package into gdb and gdb-python.
 
 	* mingw32/mingw32-gdb.xml: Update to 7.2-2.
 	* mingw32/issue.log: Updated accordingly.
